--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -611,6 +611,9 @@
     <Compile Include="Areas\Welding\Models\Lastwelds_Result.cs">
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Areas\Welding\Models\QISViewer.cs">
+      <DependentUpon>WeldingModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Areas\Welding\Models\rt_AutoWorkFlowULPlans.cs">
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
@@ -1164,6 +1167,9 @@
     <Content Include="Areas\Welding\Views\Launch\StabilityInDicationV316.cshtml" />
     <Content Include="Areas\Welding\Views\Launch\ComparePitchV316.cshtml" />
     <Content Include="Areas\Welding\Views\WM\LastWelds.cshtml" />
+    <Content Include="Areas\Welding\Views\WM\TV.cshtml" />
+    <Content Include="Areas\Welding\Views\WM\_ConnectionState.cshtml" />
+    <Content Include="Areas\Welding\Views\WM\_QISvieuwer.cshtml" />
     <None Include="Properties\PublishProfiles\gensvw1178-DEV-VCG.pubxml" />
     <None Include="Properties\PublishProfiles\gensvw1178-PRODUCTION-VCG.pubxml" />
     <None Include="Properties\PublishProfiles\gotsvw11292-PRODUCTION-VCTA.pubxml" />
