--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -188,6 +188,8 @@
     <Folder Include="Areas\VCSC\Models\" />
     <Folder Include="Areas\VCSC\Views\Shared\" />
     <Folder Include="Areas\VWSC\Views\Shared\" />
+    <Folder Include="Areas\Welding\Views\ARO\" />
+    <Folder Include="Areas\Welding\Views\Teardown Team\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Code\MyRowStyling.cs" />
@@ -670,6 +672,11 @@
     </Compile>
     <Compile Include="Areas\VWSC\Models\winService.cs" />
     <Compile Include="Areas\VWSC\VWSCAreaRegistration.cs" />
+    <Compile Include="Areas\Welding\Controllers\AROController.cs" />
+    <Compile Include="Areas\Welding\Controllers\LaunchController.cs" />
+    <Compile Include="Areas\Welding\Controllers\QteamController.cs" />
+    <Compile Include="Areas\Welding\Controllers\TeardownTeam.cs" />
+    <Compile Include="Areas\Welding\Controllers\WMController.cs" />
     <Compile Include="Areas\Welding\Models\BosProgramAvailable.cs">
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
@@ -1205,7 +1212,6 @@
     <Content Include="Areas\Welding\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Welding\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Welding\Views\Welding\Index.cshtml" />
-    <Content Include="Areas\Welding\Views\Welding\Pagina1.cshtml" />
     <EntityDeploy Include="Areas\Welding\Models\WeldingModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>WeldingModel.Designer.cs</LastGenOutput>
@@ -1213,8 +1219,6 @@
     <Content Include="Areas\Welding\Models\WeldingModel.edmx.diagram">
       <DependentUpon>WeldingModel.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\Welding\Views\Welding\AutomaticWorkFlowULPlans.cshtml" />
-    <Content Include="Areas\Welding\Views\Welding\AutomaticWorkFlowULPlansFilter.cshtml" />
     <Content Include="Areas\PlcSupervisie\Views\Screenshot\CarouselBF.cshtml" />
     <Content Include="Areas\user_management\Views\user\ForbiddenMethod.cshtml" />
     <Content Include="Areas\user_management\Views\user\LoginPrompt.cshtml" />
@@ -1230,7 +1234,6 @@
     <Content Include="Areas\Alert\Views\L_controlLimits\_List.cshtml" />
     <Content Include="Areas\Alert\Views\Alert\_ControlChart.cshtml" />
     <Content Include="App_Code\MyHtmlHelpers.cshtml" />
-    <Content Include="Areas\Welding\Views\Welding\ExtraControlers.cshtml" />
     <Content Include="Areas\VASC\Views\c_service_setup\_sessionSetupGrid.cshtml" />
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
@@ -1287,6 +1290,25 @@
     <Content Include="Areas\VWSC\Views\vwsc\_jobdetails.cshtml" />
     <Content Include="Areas\VWSC\Views\vwsc\_weldFault.cshtml" />
     <Content Include="Areas\VWSC\Views\vwsc\_jobBreakdown.cshtml" />
+    <Content Include="Areas\Welding\Views\Launch\BosProgramAvailable.cshtml" />
+    <Content Include="Areas\Welding\Views\Launch\CheckDubbelPrograms.cshtml" />
+    <Content Include="Areas\Welding\Views\Launch\ComparePitchV316.cshtml" />
+    <Content Include="Areas\Welding\Views\Launch\DoubleSpotCheck.cshtml" />
+    <Content Include="Areas\Welding\Views\Launch\dressrequired.cshtml" />
+    <Content Include="Areas\Welding\Views\Launch\Index.cshtml" />
+    <Content Include="Areas\Welding\Views\Launch\StabilityInDicationV316.cshtml" />
+    <Content Include="Areas\Welding\Views\Launch\WeldtimeSpotsSetup.cshtml" />
+    <Content Include="Areas\Welding\Views\Qteam\Index.cshtml" />
+    <Content Include="Areas\Welding\Views\Qteam\rt_AutoWorkFlowULPlans.cshtml" />
+    <Content Include="Areas\Welding\Views\Qteam\rt_ExtraControles.cshtml" />
+    <Content Include="Areas\Welding\Views\Qteam\ULRapportering.cshtml" />
+    <Content Include="Areas\Welding\Views\WM\Index.cshtml" />
+    <Content Include="Areas\Welding\Views\WM\LastWelds.cshtml" />
+    <Content Include="Areas\Welding\Views\WM\Launch.cshtml" />
+    <Content Include="Areas\Welding\Views\WM\TV.cshtml" />
+    <Content Include="Areas\Welding\Views\WM\_ConnectionState.cshtml" />
+    <Content Include="Areas\Welding\Views\WM\_QISvieuwer.cshtml" />
+    <Content Include="Areas\Welding\Views\WM\_TimerBreakdowns_busy.cshtml" />
     <None Include="Properties\PublishProfiles\gensvw1178-DEV-VCG.pubxml" />
     <None Include="Properties\PublishProfiles\gensvw1178-PRODUCTION-VCG.pubxml" />
     <None Include="Properties\PublishProfiles\gotsvw11292-PRODUCTION-VCTA.pubxml" />
